--- a/assets/css/components/footer/_footer.sass
+++ b/assets/css/components/footer/_footer.sass
@@ -1,6 +1,17 @@
 .footer 
 	padding-bottom: 30px
+	padding-top: 30px
 	.title
 		@extend .boxed
 		margin-bottom: 30px !important
+.copyright
+	text-align: center 
+	padding: 30px 45px
+	background-color: $lightblue
+	color: white
+	p 
+		+rem('font-size', 14px)
+		display: inline-block 
+		a 
+			font-weight: bold
 
