--- a/assets/css/pages/nossos-gatos/_nossos-gatos.sass
+++ b/assets/css/pages/nossos-gatos/_nossos-gatos.sass
@@ -1,3 +1,9 @@
+.pg-interna
+	&.pg-nossos-gatos
+		.text-box
+			.container
+				padding-top: 0	
+				padding-bottom: 15px
 .nossos-gatos
 	@extend .flex
 	flex-flow: row wrap 
