--- a/assets/css/pages/o-gatil/_o-gatil.sass
+++ b/assets/css/pages/o-gatil/_o-gatil.sass
@@ -3,7 +3,7 @@
 		.main 
 			+mq(1260px, min)
 				background: url(assets/imgs/paws-horizontal.png) center bottom no-repeat transparent
-				padding-bottom: 760px	
+				padding-bottom: 0
 		.filiacao
 			margin-bottom: 30px		
 		.text-box
