--- a/assets/css/pages/contato/_contato.sass
+++ b/assets/css/pages/contato/_contato.sass
@@ -2,31 +2,44 @@
 	.contato
 		background-color: $darkblue
 		color: white 
+		.title 
+			color: white 
+			display: block
+			padding: 90px 0 30px
+			+rem('font-size', 22px)
+			letter-spacing: 2px
 		.container 
-			padding-top: 60px
-			padding-bottom: 60px
+			@extend .flex 
+			flex-flow: row wrap 
+			justify-content: center 
+			align-items: flex-start
+			padding-bottom: 90px
 			text-align: center
-			>*:not(:first-child):not(:last-child)
-				margin-top: 50px
-				+mq(1440px, max)
-					margin-top: 25px
+			> *:not(:last-child)
+				margin-right: 40px
 			p, .socialnetworks span 
 				color: white 
 				+rem('font-size', 55px)
 				+mq(1440px, max)
 					+rem('font-size', 19px)				
 				font-weight: 600
-			p i 
-				display: block 
 			i 
 				color: $lightblue 
-				+rem('font-size', 75px)
+				+rem(('font-size' : 75px, 'line-height' : 30px))
+				height: 30px
+				width: 30px
+				text-align: center
+				display: inline-block 
+				vertical-align: middle
+				&:hover 	
+					color: white
 				+mq(1440px, max)
 					+rem('font-size', 35px)
 			.socialnetworks > li 
 				display: inline-block 
 				vertical-align: middle
-				margin: 0 5px 10px
+				&:not(:first-child)
+					margin-left: 40px
 	.contactform
 		.container
 			max-width: 1440px
@@ -56,7 +69,7 @@
 			textarea
 				display: block 
 				width: 100%
-				border: 2px $darkblue solid 
+				border: 1px $darkblue solid 
 				+border(5px)
 				color: $darkblue 
 				+rem(('font-size':32px, 'line-height':100px))
