--- a/assets/css/tools/_objects.sass
+++ b/assets/css/tools/_objects.sass
@@ -86,9 +86,9 @@ input
 .parallax
     display: block 
     width: 100%
-    padding: 0 0 40%
+    padding: 0 0 30%
     +mq(814px, max)
-        padding: 0 0 50%
+        padding: 0 0 40%
         background-position: left center
     background-size: cover 
     background-position: center center
@@ -138,7 +138,7 @@ input
         height: 500px
         width: 500px
         content: ''
-    & + * 
+    & + *:not(.title)
         padding-left: 130px     
         +mq(900px, max)
             padding-left: 0    
@@ -240,9 +240,7 @@ input
             width: 100%
             flex: 0 0 auto !important
             margin-right: 0 !important
-            margin-bottom: 110px
-            +mq(814px, max)
-                margin-bottom: 30px
+            margin-bottom: 60px
         flex: 0 0 auto
         +mq(814px, max) 
             flex: 1
@@ -250,7 +248,7 @@ input
         img 
             display: inline-block
             max-width: 100%  
-            max-height: 150px    
+            max-height: 90px    
         &:not(:last-child)
             margin-right: 75px            
 
