--- a/assets/css/components/footer/_footer.sass
+++ b/assets/css/components/footer/_footer.sass
@@ -7,7 +7,7 @@
 .copyright
 	text-align: center 
 	padding: 30px 45px
-	background-color: $lightblue
+	background-color: $darkblue
 	color: white
 	p 
 		+rem('font-size', 14px)
