--- a/assets/css/components/header/_header.sass
+++ b/assets/css/components/header/_header.sass
@@ -1,5 +1,6 @@
 .header
-	background-color: $darkblue
+	background-color: white
+	+shadow(0px,0px,15px,-8px,black)
 	.container 
 		@extend .flex
 		flex-flow: row wrap 
@@ -11,46 +12,68 @@
 		// 	padding-top: 50px
 		// 	padding-bottom: 50px
 		+mq(814px, max)
-			padding-left: 45px
-			padding-right: 30px
+			padding-left: 25px
+			padding-right: 15px
+		.socialnetworks
+			flex: 0 0 auto
+			+mq(1180px, max)
+				display: none
+			>li 
+				color: $darkblue
+				display: inline-block 
+				+rem('font-size', 30px)
+				&:not(:last-child)
+					margin-right: 5px
 		.logo 
-			flex: 1
+			flex: 0 0 auto
 			// +mq(1336px, max)
 			// 	flex: 0 0 auto
 			// 	+mq(1200px, max)
 			// 		flex: 1
-			// 		+mq(1080px, max)
+			// 		+mq(1180px, max)
 			// 			flex: 0 0 auto
 			// 			padding-right: 0
 			// 			width: 100%
 			// 			text-align: center
 			// 			z-index: 1
-			padding-right: 30px
-			+mq(1080px, max)
-				text-align: center 
+			+mq(1180px, max)
+				flex: 1
+				text-align: center
+				text-indent: 45px
+				+mq(814px, max)
+					text-indent: 0
+					text-align: left
+			img,svg
+				cursor: pointer		
+				+mq(814px, max)
+					max-height: 90px
 			img 
 				max-height: 120px
 				+transition(500ms)
-				+mq(1080px, max)
+				+mq(1180px, max)
 					display: inline-block
 				// +mq(1336px, max)
 				// 	max-height: 100px
 				// 	+mq(568px, max)
 				// 		max-height: 17vw 
 	.navigation
-		flex: 0 0 auto
+		flex: 1
+		+mq(1180px, max)
+			flex: 0 0 auto
+			padding-right: 0
+		padding: 0 35px
 		// +mq(1336px, max)
 		// 	flex: 1
 		// 	+mq(1200px, max)	
 		// 		flex: 0 0 auto 
-		// 		+mq(1080px, max)
+		// 		+mq(1180px, max)
 		// 			margin-left: -57px
 		// 			z-index: 2
 		>ul 
 			width: 100%
 			@extend .flex
 			flex-flow: row wrap 
-			justify-content: flex-end
+			justify-content: center
 			align-items: center
 			>li 
 				+mq(1280px, min)
@@ -70,13 +93,13 @@
 					color: $lightblue
 		ul
 			li 
-				color: white 
+				color: $darkblue 
 				+rem('font-size', 22px)
 				// +mq(1540px, max)
 				// 	+rem('font-size', 30px)
 				// 	+mq(1440px, max)
 				// 		+rem('font-size', 24px)
-				+mq(1080px, max)
+				+mq(1180px, max)
 					&:not(:last-child)
 						display: none 
 					&:last-child
@@ -86,7 +109,7 @@
 	&.sticky
 		+transition(500ms)
 		position: fixed
-		+mq(1080px, max)
+		+mq(1180px, max)
 			display: none !important
 		left: 0
 		top: 0
