--- a/assets/css/tools/_colors.sass
+++ b/assets/css/tools/_colors.sass
@@ -4,5 +4,5 @@ $whitesmoke: #f5f5f5
 $coal: #7e7e7e
 $lightgray: #e6e6e6
 $darkblue: #1e2637
-$lightblue: #b4d6f1
+$lightblue: #6dace1
 $gray: #666666
