--- a/style.sass
+++ b/style.sass
@@ -30,3 +30,4 @@
 @import './assets/css/pages/single/_single' 
 @import './assets/css/pages/o-gatil/_o-gatil' 
 @import './assets/css/pages/contato/_contato' 
+@import './assets/css/pages/404/_404' 
