--- a/assets/css/pages/home/_home.sass
+++ b/assets/css/pages/home/_home.sass
@@ -1,8 +1,17 @@
+.pg-home
+	section
+		&:not(.webdoor-wrapper)
+			+mq(1280px, min) 
+				opacity: 0 
+		+transition(500ms)
+		&.animated
+			opacity: 1
+
 .webdoor
 	.item
-		padding: 0 0 35%
+		padding: 0 0 50%
 		+mq(814px, max)
-			padding: 0 0 50%
+			padding: 0 0 35%
 		background-size: cover 
 		background-position: center  center
 		background-repeat: no-repeat
@@ -35,7 +44,7 @@
 	background-size: cover 
 	background-position: center 45px
 	+mq(814px, max)
-		background-position: left center
+		background-image: none
 	background-repeat: no-repeat
 	overflow: hidden
 	z-index: 1
@@ -50,10 +59,11 @@
 								top: 0	
 								opacity: 1
 	.container 
-		padding-top: 100px
-		padding-bottom: 50px
+		padding-top: 200px
+		padding-bottom: 150px
 		+mq(814px, max)
-			padding-top: 50px
+			padding-top: 100px
+			padding-bottom: 50px
 		.navegacao 
 			@extend .flex 
 			flex-flow: row wrap 
@@ -107,12 +117,12 @@
 					display: block
 
 .quem-somos
+	overflow: hidden
 	.titulo
 		@extend .title
-		font-family: 'Amarillo'
-		margin-bottom: -65px
-		+mq(814px, max)
-			margin: 15px auto -10px
+		+rem('font-size', 55px)
+		color: white
+		margin-bottom: 60px
 		z-index: 2
 	.container-wrapper 
 		color: white 
@@ -121,48 +131,50 @@
 		border-top: 25px $lightblue solid
 		max-width: 100%
 		.container
-			padding-top: 100px
-			padding-bottom: 100px
 			text-align: center
+			padding-top: 100px
+			+mq(814px, max)
+				padding-bottom: 60px
+			z-index: 2
 		p  	
 			color: inherit
 			@extend .text
+			+rem('font-size', 19px)
 			margin-top: 0
 			+mq(814px, max)
+				+rem('font-size', 16px)
 				padding-left: 15px
 				padding-right: 15px
 		.btn-wrapper 
-			margin: 60px auto 0
-			@extend .flex
-			flex-flow: row wrap 
-			justify-content: space-between
-			+mq(814px, max)
-				justify-content: center
-				flex-flow: column wrap
-			align-items: center
-			&::after,
-			&::before 
-				content: ''
-				flex: 1
-				height: 5px 
-				background-color: $lightblue
-				+mq(737px, max)
-					display: none
+			// @extend .flex
+			// flex-flow: row wrap 
+			// justify-content: space-between
+			// +mq(814px, max)
+			// 	justify-content: center
+			// 	flex-flow: column wrap
+			// align-items: center
+			// &::after,
+			// &::before 
+			// 	content: ''
+			// 	flex: 1
+			// 	height: 5px 
+			// 	background-color: $lightblue
+			// 	+mq(737px, max)
+			// 		display: none
 			.btn 
-				flex: 0 0 auto 
-				margin: 0 157px
-				+mq(1440px, max)
-					margin: 0 70px
-					+mq(737px, max)
-						margin: 0 auto
-						width: calc(100% - 30px)
+				margin: 90px auto 0
 				+transition(500ms)
+				max-width: 333px
+				padding-top: 15px 
+				padding-bottom: 13px
+				+rem('font-size', 29px)
 				&:hover 
 					+mq(1280px, min)
 						transform: scale(1.1)
 						background-color: lighten($lightblue, 5%)
 
 .parallax
+	position: relative
 	+mq('814px', max)
 		background-attachment: scroll !important
 	&.has_text
@@ -172,6 +184,7 @@
 		text-align: center
 		.container 
 			padding: 60px 45px
+			z-index: 2
 			+mq(814px, max)
 				padding: 60px 30px
 			.titulo 
@@ -179,3 +192,15 @@
 				margin-bottom: 30px
 			p 
 				@extend .text
+
+.pg-home 
+	.parallax
+		padding: 0
+		height: 640px
+		.mask 
+			transform: rotate(180deg)
+			transform-origin: center 0
+			left: 0 
+			top: 20vw
+			z-index: 1
+			position: absolute		
